--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor/angular": "^2.0.3",
     "@capacitor/app": "6.0.0",
+    "@capacitor/camera": "^6.0.1",
     "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
     "firebase": "^10.12.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
